[workspace]
members = ["erenflow-ai", "erenflow-ai-macros", "simple-example"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Oussama Ben Hariz"]
license = "MIT"
repository = "https://github.com/oussamabenhariz/ErenFlowAI"
homepage = "https://github.com/oussamabenhariz/ErenFlowAI"
